# brain-bench-fe

./: .gitignore  .gitmodules  Pipfile  README.md  benchmarks.json  package.json  pnpm-lock.yaml
.github/workflows/: benchmarks.yml  run_benchmarks.yml  test.yml
accum_conv_ezkl/benches/: bench.rs
accum_matmul_overflow_ezkl/benches/: bench.rs
mnist_ezkl/benches/: bench.rs
mnist_zkml/benches/: bench.rs
rust_examples/accum_conv_ezkl/: Cargo.toml
rust_examples/ezkl/: Cargo.toml
rust_examples/ezkl/accum_conv/: Cargo.toml  bench.json
rust_examples/ezkl/accum_conv/benches/: bench.rs
rust_examples/ezkl/accum_matmul_overflow/: Cargo.toml  bench.json
site/: README.md  mdx-components.tsx  package.json  pnpm-lock.yaml
site/src/app/: layout.tsx  page.tsx  providers.tsx  theme.ts
site/src/components/: ColorModeSwitcher.tsx  ResultsTable.tsx
site/src/fixtures/: benchmarks.json  frameworks.tsx  onnx_ops.json  tables.tsx  tflite_ops.json
site/src/fixtures/ezkl/: supported_ops.json
site/src/mkd/: faq.mdx
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: Charts.tsx  ResultsTable.tsx
src/fixtures/: benchmarks.json  frameworks.tsx  tables.tsx
src/fixtures/ezkl/: supported_ops.json
src/fixtures/orion/: supported_ops.json
src/fixtures/zkml/: supported_ops.json
src/util/: bench_json.ts  date.ts
